--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>devCodeCamp &middot; Most Wanted</title>
   </head>
   <body>
+    
+
     <form id="nameForm">
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" value="Joy"><br>
@@ -14,6 +16,12 @@
     </form>
 
 
+
+    <!-- <div> 
+    <img id="409574486" src="Assets/409574486.jfif">
+    </div> -->
+
+    <!-- <script src="styles.css"></script> -->
     <script src="data.js"></script>
     <script src="app.js"></script>
   </body>
@@ -21,3 +29,4 @@
 
 
 <!-- HELLO GUYS -->
+
