started a search filter on line 21 of the html page so that we can link the people array to the filter in html and javascript

--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" value="Joy"><br>
         <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="Madden"><br><br>
+        <input type="text" id="lname" name="lname" value="Madden"><br>
+        <label for="gender">Gender:</label><br>
+        <input type="text" id="gender" name="gender" value="Male/Female"><br>
         <input type="button" onclick="searchByName()" value="Submit">
     </form>
 
+
+    <form id="searchFilter">
+      
+  </form>
+
+    
 
 
     <!-- <div> 
