searchByGender now works.

--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
 
     <form id="nameForm">
         <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value="Joy"><br>
+        <input type="text" id="fname" name="fname" value=""><br>
         <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="Madden"><br>
+        <input type="text" id="lname" name="lname" value=""><br>
         <label for="gender">Gender:</label><br>
-        <input type="text" id="gender" name="gender" value="Male/Female"><br>
+        <input type="text" id="gender" name="gender" value=""><br>
         <label for="dob">D.O.B.:</label><br>
-        <input type="text" id="dob" name="dob" value="mm/ff/yyyy"><br>
+        <input type="text" id="dob" name="dob" value=""><br>
         <label for="height">Height:</label><br>
-        <input type="text" id="height" name="height" value="inches"><br>
+        <input type="text" id="height" name="height" value=""><br>
         <label for="weight">Weight:</label><br>
-        <input type="text" id="weight" name="weight" value="lbs"><br>
+        <input type="text" id="weight" name="weight" value=""><br>
         <label for="eyecolor">Eyecolor:</label><br>
-        <input type="text" id="eyecolor" name="eyecolor" value="color"><br>
+        <input type="text" id="eyecolor" name="eyecolor" value=""><br>
         <label for="occupation">Occupation:</label><br>
-        <input type="text" id="occupation" name="occupation" value="occupation"><br>
+        <input type="text" id="occupation" name="occupation" value=""><br>
         <label for="parents">Parents</label><br>
-        <input type="text" id="parents" name="parents" value="parents"><br>
+        <input type="text" id="parents" name="parents" value=""><br>
         <label for="currentspouse">Currentspouse</label><br>
-        <input type="text" id="currentspouse" name="currentspouse" value="curentspouse"><br>
-        <input type="button" onclick="searchByName()" value="Submit">
+        <input type="text" id="currentspouse" name="currentspouse" value=""><br>
+        <input type="button" onclick="searchByGender() + searchByName()" value="Submit">
 
     </form>
 
