added functions through currentspouse

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <input type="text" id="parents" name="parents" value=""><br>
         <label for="currentspouse">Currentspouse</label><br>
         <input type="text" id="currentspouse" name="currentspouse" value=""><br>
-        <input type="button" onclick="searchByGender() + searchByName() + searchByDob()" value="Submit">
+        <input type="button" onclick="searchByGender() + searchByName() + searchByDob() + searchByHeight()" value="Submit">
 
     </form>
 
