--- a/index.html
+++ b/index.html
@@ -7,45 +7,69 @@
   </head>
   <body>
     <header>devCodeCamps Most Wanted List</header>
-
-    <form id="nameForm">
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value=""><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value=""><br>
-        <label for="gender">Gender:(male/female)</label><br>
-        <input type="text" id="gender" name="gender" value=""><br>
-        <label for="dob">D.O.B.:(mm/dd/yyyy)</label><br>
-        <input type="text" id="dob" name="dob" value=""><br>
-        <label for="height">Height:(inches)</label><br>
-        <input type="text" id="height" name="height" value=""><br>
-        <label for="weight">Weight:(lbs)</label><br>
-        <input type="text" id="weight" name="weight" value=""><br>
-        <label for="eyecolor">Eyecolor:</label><br>
-        <input type="text" id="eyecolor" name="eyecolor" value=""><br>
-        <label for="occupation">Occupation:</label><br>
-        <input type="text" id="occupation" name="occupation" value=""><br>
-        <label for="parents">Parents</label><br>
-        <input type="text" id="parents" name="parents" value=""><br>
-        <label for="currentspouse">Currentspouse</label><br>
-        <input type="text" id="currentspouse" name="currentspouse" value=""><br>
-        <input type="button" onclick="searchByGender() + searchByName() + searchByDob() + searchByHeight()" value="Submit">
-
-    </form>
-
-
-    <form id="searchFilter">
+    <div>
+      <form id="nameForm">
+      <label for="fname">First name:</label><br>
+      <input type="text" id="fname" name="fname" value=""><br>
+      <label for="lname">Last name:</label><br>
+      <input type="text" id="lname" name="lname" value=""><br>
+      <label for="gender">Gender:(male/female)</label><br>
+      <input type="text" id="gender" name="gender" value=""><br>
+      <label for="dob">D.O.B.:(mm/dd/yyyy)</label><br>
+      <input type="text" id="dob" name="dob" value=""><br>
+      <label for="height">Height:(inches)</label><br>
+      <input type="text" id="height" name="height" value=""><br>
+      <label for="weight">Weight:(lbs)</label><br>
+      <input type="text" id="weight" name="weight" value=""><br>
+      <label for="eyecolor">Eyecolor:</label><br>
+      <input type="text" id="eyecolor" name="eyecolor" value=""><br>
+      <label for="occupation">Occupation:</label><br>
+      <input type="text" id="occupation" name="occupation" value=""><br>
+      <label for="parents">Parents</label><br>
+      <input type="text" id="parents" name="parents" value=""><br>
+      <label for="currentspouse">Currentspouse</label><br>
+      <input type="text" id="currentspouse" name="currentspouse" value=""><br>
+      <input type="button" onclick="searchByGender() + searchByName() + searchByDob() + searchByHeight()" value="Submit">
 
   </form>
 
 
+  <form id="searchResults" class="formRight">
+
+      <label for="fname">First name:</label><br>
+      <input type="text" id="fname" name="fname" value=""><br>
+      <label for="lname">Last name:</label><br>
+      <input type="text" id="lname" name="lname" value=""><br>
+      <label for="gender">Gender:(male/female)</label><br>
+      <input type="text" id="gender" name="gender" value=""><br>
+      <label for="dob">D.O.B.:(mm/dd/yyyy)</label><br>
+      <input type="text" id="dob" name="dob" value=""><br>
+      <label for="height">Height:(inches)</label><br>
+      <input type="text" id="height" name="height" value=""><br>
+      <label for="weight">Weight:(lbs)</label><br>
+      <input type="text" id="weight" name="weight" value=""><br>
+      <label for="eyecolor">Eyecolor:</label><br>
+      <input type="text" id="eyecolor" name="eyecolor" value=""><br>
+      <label for="occupation">Occupation:</label><br>
+      <input type="text" id="occupation" name="occupation" value=""><br>
+      <label for="parents">Parents</label><br>
+      <input type="text" id="parents" name="parents" value=""><br>
+      <label for="currentspouse">Currentspouse</label><br>
+      <input type="text" id="currentspouse" name="currentspouse" value=""><br>
+
+  </form>
+
+    </div>
+
+    <div>
+      <img src="assets/409574486.jfif" alt="" />
+    </div>
 
 
-    <!-- <div>
-    <img id="409574486" src="Assets/409574486.jfif">
-    </div> -->
 
-    <!-- <script src="styles.css"></script> -->
+
+
+
     <script src="data.js"></script>
     <script src="app.js"></script>
   </body>
