Added return true to if statements in main function still need else arguement

--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
     <div>
       <form id="nameForm">
       <label for="fname">First name:</label><br>
-      <input type="text" id="fname" name="fname" value=""><br>
+      <input type="text" id="fname" name="fname" value=><br>
       <label for="lname">Last name:</label><br>
-      <input type="text" id="lname" name="lname" value=""><br>
+      <input type="text" id="lname" name="lname" value=><br>
       <label for="gender">Gender:(male/female)</label><br>
-      <input type="text" id="gender" name="gender" value=""><br>
+      <input type="text" id="gender" name="gender" value=><br>
       <label for="dob">D.O.B.:(mm/dd/yyyy)</label><br>
-      <input type="text" id="dob" name="dob" value=""><br>
+      <input type="text" id="dob" name="dob" value=><br>
       <label for="height">Height:(inches)</label><br>
-      <input type="text" id="height" name="height" value=""><br>
+      <input type="text" id="height" name="height" value=><br>
       <label for="weight">Weight:(lbs)</label><br>
-      <input type="text" id="weight" name="weight" value=""><br>
+      <input type="text" id="weight" name="weight" value=><br>
       <label for="eyecolor">Eyecolor:</label><br>
-      <input type="text" id="eyecolor" name="eyecolor" value=""><br>
+      <input type="text" id="eyecolor" name="eyecolor" value=><br>
       <label for="occupation">Occupation:</label><br>
-      <input type="text" id="occupation" name="occupation" value=""><br>
+      <input type="text" id="occupation" name="occupation" value=><br>
       <label for="parents">Parents</label><br>
-      <input type="text" id="parents" name="parents" value=""><br>
+      <input type="text" id="parents" name="parents" value=><br>
       <label for="currentspouse">Currentspouse</label><br>
-      <input type="text" id="currentspouse" name="currentspouse" value=""><br>
+      <input type="text" id="currentspouse" name="currentspouse" value=><br>
       <input type="button" onclick="mainSearchFunction()" value="Submit">
 
   </form>
