--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 
   </form>
 
-    <div id="myTable"></div>
+  <div id="myTable"></div>
+  <div id="filteredTable"></div>
+
+    
 
 
     </div>
