tried reset tabel but commented out.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
   <div id="myTable"></div>
 
 
-  <div id="filteredTable"></div>
+  <div id="filteredTable">
+    <!-- <input type="button" onclick="resetFunction()" value="Reset table"> -->
+  </div>
 
 
 
