added images to gallery

--- a/index.html
+++ b/index.html
@@ -32,13 +32,41 @@
       <input type="button" onclick="mainSearchFunction()" value="Submit">
 
   </form>
-
+ <div id="filteredTable">
+    <!-- <input type="button" onclick="resetFunction()" value="Reset table"> -->
+  </div>
   <div id="myTable"></div>
 
 
-  <div id="filteredTable">
-    <!-- <input type="button" onclick="resetFunction()" value="Reset table"> -->
-  </div>
+ 
+<div class="gallery">
+  <a target="_blank" href="Assets/amiipafoy.jpg">
+    <img src="Assets/amiipafoy.jpg" alt="Amii Pafoy" width="" height="">
+  </a>
+  <div class="desc">Amii Pafoy</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/anniepafoy.jpg">
+    <img src="Assets/anniepafoy.jpg" alt="Annie Pafoy" width="" height="">
+  </a>
+  <div class="desc">Annie Pafoy</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/billybob.jpg">
+    <img src="Assets/billybob.jpg" alt="Billy Bob" width="" height="">
+  </a>
+  <div class="desc">Billy Bob</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/davepafoy.jpg">
+    <img src="Assets/davepafoy.jpg" alt="Dave Pafoy" width="" height="">
+  </a>
+  <div class="desc">Dave Pafoy</div>
+</div>
+
 
 
 
@@ -46,6 +74,7 @@
 
     <div>
       <img src="assets/409574486.jfif" alt="" />
+    
     </div>
 
 
