added more images to mugshot gallery

--- a/index.html
+++ b/index.html
@@ -67,7 +67,104 @@
   <div class="desc">Dave Pafoy</div>
 </div>
 
+<div class="gallery">
+  <a target="_blank" href="Assets/elouisemadden.jfif">
+    <img src="Assets/elouisemadden.jfif" alt="Elouise Madden" width="" height="">
+  </a>
+  <div class="desc">Elouise Madden</div>
+</div>
 
+<div class="gallery">
+  <a target="_blank" href="Assets/ellenmadden.jfif">
+    <img src="Assets/ellenmadden.jfif" alt="Ellen Madden" width="" height="">
+  </a>
+  <div class="desc">Eleen Madden</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/hannamadden.jpg">
+    <img src="Assets/hannamadden.jpg" alt="Hanna Madden" width="" height="">
+  </a>
+  <div class="desc">Hannah Madden</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/jackpafoy.jpg">
+    <img src="Assets/jackpafoy.jpg" alt="Jack Pafoy" width="" height="">
+  </a>
+  <div class="desc">Jack Pafoy</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/jasminbob.jpg">
+    <img src="Assets/jasminbob.jpg" alt="Jasmin Bob" width="" height="">
+  </a>
+  <div class="desc">Jasmin Bob</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/jenpafoy.jpg">
+    <img src="Assets/jenpafoy.jpg" alt="Jen Pafoy" width="" height="">
+  </a>
+  <div class="desc">Jen Pafoy</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/jillpafoy.jpg">
+    <img src="Assets/jillpafoy.jpg" alt="Jill Pafoy" width="" height="">
+  </a>
+  <div class="desc">Jill Pafoy</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/joeymadden.jpg">
+    <img src="Assets/joeymadden.jpg" alt="Joey Madden" width="" height="">
+  </a>
+  <div class="desc">Joey Madden</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/jon w.jpg">
+    <img src="Assets/jon w.jpg" alt="Jon W" width="" height="">
+  </a>
+  <div class="desc">Jon W</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/madermadden.jpg">
+    <img src="Assets/madermadden.jpg" alt="Mader Madden" width="" height="">
+  </a>
+  <div class="desc">Mader Madden </div>
+</div>
+
+
+<div class="gallery">
+  <a target="_blank" href="Assets/mattiasmadden.jpg">
+    <img src="Assets/mattiasmadden.jpg" alt="Mattia Madden" width="" height="">
+  </a>
+  <div class="desc">Mattia Madden</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/missespotatoe.jpg">
+    <img src="Assets/missespotatoe.jpg" alt="Mizzus Potatoe" width="" height="">
+  </a>
+  <div class="desc">Mizzus Potatoe</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/misterpotatoehead.png">
+    <img src="Assets/misterpotatoehead.png" alt="Mister Potatoe" width="" height="">
+  </a>
+  <div class="desc">Mister Potatoe</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/reginamadden.jpg">
+    <img src="Assets/reginamadden.jpg" alt="Regina Madden" width="" height="">
+  </a>
+  <div class="desc">Regina Madden </div>
+</div>
 
 
     </div>
