added more images and style

--- a/index.html
+++ b/index.html
@@ -167,12 +167,33 @@
 </div>
 
 
+<div class="gallery">
+  <a target="_blank" href="Assets/umabob.jpg">
+    <img src="Assets/umabob.jpg" alt="Uma Bob" width="" height="">
+  </a>
+  <div class="desc">Uma Bob</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/ralphbob.jfif">
+    <img src="Assets/ralphbob.jfif" alt="Raplh Bob" width="" height="">
+  </a>
+  <div class="desc">Raplh Bob</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="Assets/Michael Walkens.jfif">
+    <img src="Assets/Michael Walkens.jfif" alt="Michael Walkens" width="" height="">
+  </a>
+  <div class="desc">Michael Walkens</div>
+</div>
+
+
+
+
     </div>
 
-    <div>
-      <img src="assets/409574486.jfif" alt="" />
-    
-    </div>
+  
 
 
 
