resized img files

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div id="myTable"></div>
 
 
- 
+
 <div class="gallery">
   <a target="_blank" href="Assets/amiipafoy.jpg">
     <img src="Assets/amiipafoy.jpg" alt="Amii Pafoy" width="" height="">
@@ -68,8 +68,8 @@
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="Assets/elouisemadden.jfif">
-    <img src="Assets/elouisemadden.jfif" alt="Elouise Madden" width="" height="">
+  <a target="_blank" href="Assets/elouisemadden.jpg">
+    <img src="Assets/elouisemadden.jpg" alt="Elouise Madden" width="" height="">
   </a>
   <div class="desc">Elouise Madden</div>
 </div>
@@ -193,7 +193,7 @@
 
     </div>
 
-  
+
 
 
 
