added background and changed header color

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Most Wanted</title>
   </head>
+  <style>
+    body {
+      color: whitesmoke;
+      
+
+      background-image: url(Assets/mostwantedback1.jpg);
+      background-size: cover;
+    }
+    </style>
   <body>
     <header>devCodeCamps Most Wanted List</header>
     <div>
