--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <style>
     body {
-      color:blue;
+      color:red;
       
 
       background-image: url(Assets/mostwantedback1.jpg);
